# SDLTem

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
template/src/: sample.cpp
